<resources>
    <string name="app_name">Tugas Akhir</string>
    <string name="hai">Hai, </string>
    <string name="not_absen">Hari ini anda belum absen</string>
    <string name="not_inSchool">Anda tidak berada di sekolah</string>
    <string name="absened">Hari ini anda sudah absen</string>
    <string name="inSchool">Anda berada di sekolah</string>
    <string name="name">Nama</string>
    <string name="waktu_sebelum_masuk">Waktu sebelum masuk:</string>
    <string name="jam">jam</string>
    <string name="home">Home</string>
    <string name="title_absen">Absen</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="rekap_absen">Rekap Absen</string>
    <string name="hadir">Hadir : %d</string>
    <string name="izin">Izin : %d</string>
    <string name="alpa">Alpa : %d</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="tanggal">Tanggal</string>
    <string name="status_siswa">Siswa status</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>