<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civAvatar">
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/name"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/new_password"
            android:textColorHint="@color/gray2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray2"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/gray2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray2"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:text="@string/submit" />

    </androidx.cardview.widget.CardView>
</LinearLayout>